--- a/exercises/test_runner/index.html
+++ b/exercises/test_runner/index.html
@@ -11,6 +11,7 @@
     <div id="mocha"></div>
     <script src="mocha.js"></script>
     <script src="chai.js"></script>
+    <script src="lowdash.js"></script>
     <script>
       mocha.setup({
         ui: 'bdd',
@@ -18,6 +19,7 @@
       })
     </script>
     <script>var assert = chai.assert;</script>
+    <script src="templates.js"></script>
     <script src="tests.js"></script>
     <script>
       if (window.mochaPhantomJS) {
