--- a/exercises/test_runner/index.html
+++ b/exercises/test_runner/index.html
@@ -11,6 +11,7 @@
     <div id="mocha"></div>
     <script src="mocha.js"></script>
     <script src="chai.js"></script>
+    <script src="sinon.js"></script>
     <script src="lowdash.js"></script>
     <script>
       mocha.setup({
